# tachi-fetch

./: Cargo.toml  LICENSE  build.rs
logos/: logos.txt
src/: asm.rs  display.rs  logos.rs  main.rs  os.rs  proc.rs  shell.rs  theme.rs  utils.rs
