[package]
name = "tachi-fetch"
version = "0.1.0"
edition = "2024"

[dependencies]
libc = "0.2.172"
memchr = "2.7.4"
memmap2 = "0.9.5"
nix = { version = "0.30.1", features = ["feature"] }
once_cell = "1.21.3"
rustc-hash = "2.1.1"
smallvec = "1.15.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
